--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "orval": "^7.0.1",
+    "prettier": "3.3.3",
     "typescript": "^5"
   }
 }
