--- a/docker-compose-production.yaml
+++ b/docker-compose-production.yaml
@@ -2,5 +2,12 @@ services:
   website:
     build: .
     ports:
-      - "8083:3000"
+      - "8003:3000"
     restart: always
+    env_file:
+      - ".env.prod"
+
+networks:
+  badgehub_network:
+    name: badgehub_network
+    external: true
