--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "prebuild": "npm run swagger",
     "swagger": "orval orval --config orval.config.js"
   },
   "dependencies": {
