--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -26,7 +26,10 @@ jobs:
       - name: Check out Git repository
         uses: actions/checkout@v4
 
-      # Install your linters here
+      - uses: actions/setup-node@v4
+        with:
+          node-version-file: .tool-versions
+      - run: npm ci
 
       - name: Run linters
         uses: wearerequired/lint-action@v2
