--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "start": "next start",
     "lint": "next lint",
     "prebuild": "npm run swagger",
-    "swagger": "orval orval --config orval.config.js"
+    "swagger": "orval orval --config orval.config.js",
+    "prettier:check": "prettier --check .",
+    "prettier:format": "prettier --write ."
   },
   "dependencies": {
     "dotenv": "^16.4.5",
