--- a/package.json
+++ b/package.json
@@ -20,12 +20,12 @@
     "react-dom": "^18"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "^22.7.5",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "clsx": "^2.1.1",
-    "eslint": "^8",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^8.57.1",
+    "eslint-config-next": "^14.2.15",
     "orval": "^7.0.1",
     "prettier": "3.3.3",
     "typescript": "^5"
