--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.15",
+    "jose": "^5.9.4",
     "orval": "^7.0.1",
     "prettier": "3.3.3",
     "typescript": "^5"
