--- a/docker-compose.production.yaml
+++ b/docker-compose.production.yaml
@@ -1,11 +1,13 @@
 services:
   badgehub-frontend:
-    build: .
+    image: ghcr.io/badgeteam/badgehub-frontend:${FRONTEND_IMAGE_TAG:-latest}
     ports:
-      - "8003:3000"
+      - "8001:3000"
     restart: always
     env_file:
-      - ".env.prod"
+      - .env.prod
+    environment:
+      FRONTEND_IMAGE_TAG: "${FRONTEND_IMAGE_TAG}"
     networks:
       - badgehub_network
 
