NO_TICKET: fix KEYCLOAK_ID in .env.local.example for local setup

--- a/.env.local.example
+++ b/.env.local.example
@@ -3,9 +3,11 @@
 
 BADGEHUB_API_BASEURL=https://localhost:8081
 
-KEYCLOAK_ID=badgehub
+; local frontend using dev keycloak setup
+KEYCLOAK_ID=badgehub_local
 KEYCLOAK_SECRET=FIND_THIS_IN_KEYCLOAK_AND_REPLACE_THIS
 KEYCLOAK_ISSUER=https://keycloak.p1m.nl/realms/master
-; Local Keycloack setup
+
+; Local frontned using local Keycloak setup
 ; KEYCLOAK_ID=badgehub_local
 ; KEYCLOAK_ISSUER=http://localhost:8080/realms/master
