--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
     "clsx": "^2.1.1",
     "eslint": "^8.57.1",
     "eslint-config-next": "^14.2.15",
-    "jsonpath-plus": "^10.3.0",
     "jose": "^5.9.4",
+    "jsonpath-plus": "^10.3.0",
+    "keycloak-js": "^26.2.0",
     "orval": "^7.7.0",
     "prettier": "3.3.3",
     "typescript": "^5"
